Update First Blood

--- a/app/index.html
+++ b/app/index.html
@@ -87,7 +87,13 @@
                 <div class="course_talker"><b>讲师</b>：Junyu</div>
                 <div class="course_time"><b>课程时间</b>：2014-03-04 13:30 - 14:30</div>
                 <p><b>课程内容</b>：HTML 是前端最基础和核心的技术之一，是所有信息在浏览器中的实际载体。HTML 是一种看起来很简单，却一眼就能通过其看出一个前端工程师基础知识是否扎实的技术。本节介绍 HTML 相关的基础知识，包括元素、属性，常用标签等，以及内容、结构和表现相分离、语义化等基本概念。</p>
-                <p><b>课前准备</b>：暂无</p>
+                <p>
+                    <b>课前准备</b>：<br/>
+                    <ul>
+                        <li><a href="http://en.wikipedia.org/wiki/HTML" target="_blank">Wikipedia: HTML</a></li>
+                        <li><a href="http://www.w3.org/community/webed/wiki/HTML/Training" target="_blank">W3C HTML Educational material for beginners.</a></li>
+                    </ul>
+                </p>
             </div>
         </section>
         <section id="phase_1_2">
