fine tuning the style

--- a/app/index.html
+++ b/app/index.html
@@ -84,16 +84,14 @@
                     <img src="http://tp1.sinaimg.cn/1639510592/180/5678199702/1">
                 </div>
                 <h4>HTML 基础</h4>
-                <div class="course_talker"><b>讲师</b>：Junyu</div>
-                <div class="course_time"><b>课程时间</b>：2014-03-04 13:30 - 14:30</div>
-                <p><b>课程内容</b>：HTML 是前端最基础和核心的技术之一，是所有信息在浏览器中的实际载体。HTML 是一种看起来很简单，却一眼就能通过其看出一个前端工程师基础知识是否扎实的技术。本节介绍 HTML 相关的基础知识，包括元素、属性，常用标签等，以及内容、结构和表现相分离、语义化等基本概念。</p>
-                <p>
-                    <b>课前准备</b>：<br/>
-                    <ul>
-                        <li><a href="http://en.wikipedia.org/wiki/HTML" target="_blank">Wikipedia: HTML</a></li>
-                        <li><a href="http://www.w3.org/community/webed/wiki/HTML/Training" target="_blank">W3C HTML Educational material for beginners.</a></li>
-                    </ul>
-                </p>
+                <div class="course_talker"><strong>讲师</strong>：Junyu</div>
+                <div class="course_time"><strong>课程时间</strong>：2014-03-04 13:30 - 14:30</div>
+                <p><strong>课程内容</strong>：HTML 是前端最基础和核心的技术之一，是所有信息在浏览器中的实际载体。HTML 是一种看起来很简单，却一眼就能通过其看出一个前端工程师基础知识是否扎实的技术。本节介绍 HTML 相关的基础知识，包括元素、属性，常用标签等，以及内容、结构和表现相分离、语义化等基本概念。</p>
+                <dl>
+                    <dt>课前准备</dt>
+                    <dd><a href="http://en.wikipedia.org/wiki/HTML" target="_blank">Wikipedia: HTML</a></dd>
+                    <dd><a href="http://www.w3.org/community/webed/wiki/HTML/Training" target="_blank">W3C HTML Educational material for beginners.</a></dd>
+                </dl>
             </div>
         </section>
         <section id="phase_1_2">
@@ -102,10 +100,13 @@
                     <img src="http://tp2.sinaimg.cn/1686499445/180/5677739796/1">
                 </div>
                 <h4>CSS样式基础</h4>
-                <div class="course_talker"><b>讲师</b> ziming</div>
-                <div class="course_time"><b>课程时间</b>：2014-03-11 13:30 - 14:30</div>
-                <p><b>课程内容</b>：「人靠衣装马靠鞍」，前端开发强调内容、结构和表现分离。HTML 是「结构」，而 CSS 就是「表现」了，她决定了一个页面最终如何呈现在用户眼前。本节会介绍 CSS 的基础语法、选择器、权重、常用样式等基础知识，以及 layout 的原则和简单技巧。</p>
-                <p><b>课前准备</b>：暂无</p>
+                <div class="course_talker"><strong>讲师</strong> ziming</div>
+                <div class="course_time"><strong>课程时间</strong>：2014-03-11 13:30 - 14:30</div>
+                <p><strong>课程内容</strong>：「人靠衣装马靠鞍」，前端开发强调内容、结构和表现分离。HTML 是「结构」，而 CSS 就是「表现」了，她决定了一个页面最终如何呈现在用户眼前。本节会介绍 CSS 的基础语法、选择器、权重、常用样式等基础知识，以及 layout 的原则和简单技巧。</p>
+                <dl>
+                    <dt>课前准备</dt>
+                    <dd>暂无</dd>
+                </dl>
             </div>
         </section>
         <section id="phase_1_3">
@@ -114,10 +115,13 @@
                     <img src="http://tp3.sinaimg.cn/1620925974/180/5653534488/1">
                 </div>
                 <h4>JavaScript 基础</h4>
-                <div class="course_talker"><b>讲师</b>：aimingoo</div>
-                <div class="course_time"><b>课程时间</b>：2014-03-18 13:30 - 14:30</div>
-                <p><b>课程内容</b>：JavaScript 是前端开发中最常用的开发语言，曾有人认为 JavaScript 是一门设计失败的语言，但随着其自身的不端完善和相关生态圈的发展，甚至已经走出了浏览器被应用的到更多的场景中。本节将介绍 JavaScript 的语法、数据类型、函数、作用域等基础概念，原型继承、闭包、函数式等特色内容。（本节内容是 Phase 1 中唯一要求有编程基础的豌豆才能参加的章节）</p>
-                <p><b>课前准备</b>：暂无</p>
+                <div class="course_talker"><strong>讲师</strong>：aimingoo</div>
+                <div class="course_time"><strong>课程时间</strong>：2014-03-18 13:30 - 14:30</div>
+                <p><strong>课程内容</strong>：JavaScript 是前端开发中最常用的开发语言，曾有人认为 JavaScript 是一门设计失败的语言，但随着其自身的不端完善和相关生态圈的发展，甚至已经走出了浏览器被应用的到更多的场景中。本节将介绍 JavaScript 的语法、数据类型、函数、作用域等基础概念，原型继承、闭包、函数式等特色内容。（本节内容是 Phase 1 中唯一要求有编程基础的豌豆才能参加的章节）</p>
+                <dl>
+                    <dt>课前准备</dt>
+                    <dd>暂无</dd>
+                </dl>
             </div>
         </section>
         <section id="phase_1_4">
@@ -126,10 +130,13 @@
                     <img src="http://tp1.sinaimg.cn/2487328132/180/5685986121/1">
                 </div>
                 <h4>Chrome Developer Tools 详解</h4>
-                <div class="course_talker"><b>讲师</b>：gaohailang</div>
-                <div class="course_time"><b>课程时间</b>：2014-03-25 13:30 - 14:30</div>
-                <p><b>课程内容</b>：「工欲善其事，必先利其器」，Chrome Developer Tools 是目前最强大的 fullstack 前端调试工具，涵盖了从断点调试、步进跟踪、DOM 探查、CSS 探查等一些基础调试功能，到网络请求分析，性能分析等一系列高级工具。本节将详细介绍 Chrome Developer Tools 的使用方法和技巧。</p>
-                <p><b>课前准备</b>：暂无</p>
+                <div class="course_talker"><strong>讲师</strong>：gaohailang</div>
+                <div class="course_time"><strong>课程时间</strong>：2014-03-25 13:30 - 14:30</div>
+                <p><strong>课程内容</strong>：「工欲善其事，必先利其器」，Chrome Developer Tools 是目前最强大的 fullstack 前端调试工具，涵盖了从断点调试、步进跟踪、DOM 探查、CSS 探查等一些基础调试功能，到网络请求分析，性能分析等一系列高级工具。本节将详细介绍 Chrome Developer Tools 的使用方法和技巧。</p>
+                <dl>
+                    <dt>课前准备</dt>
+                    <dd>暂无</dd>
+                </dl>
             </div>
         </section>
         <section id="phase_1_5">
@@ -138,9 +145,13 @@
                     <img src="http://tp2.sinaimg.cn/1874908881/180/5666519669/1">
                 </div>
                 <h4>初级实战</h4>
-                <div class="course_talker"><b>讲师</b>：cheng</div>
-                <div class="course_time"><b>课程时间</b>：2014-04-01 13:30 - 14:30</div>
-                <p><b>课程内容</b>：手痒了吗？想要做一个自己的页面了吗？本节我们通过一个实例，带领大家把之前的学到的内容组合起来，变成一个高大上的页面！</p>
+                <div class="course_talker"><strong>讲师</strong>：cheng</div>
+                <div class="course_time"><strong>课程时间</strong>：2014-04-01 13:30 - 14:30</div>
+                <p><strong>课程内容</strong>：手痒了吗？想要做一个自己的页面了吗？本节我们通过一个实例，带领大家把之前的学到的内容组合起来，变成一个高大上的页面！</p>
+                <dl>
+                    <dt>课前准备</dt>
+                    <dd>暂无</dd>
+                </dl>
             </div>
         </section>
         <section id="phase_2_1">
@@ -149,10 +160,13 @@
                     <img src="http://tp2.sinaimg.cn/3155387637/180/5649847926/1">
                 </div>
                 <h4>DOM 模型和 jQuery API 简介</h4>
-                <div class="course_talker"><b>讲师</b>：yaochun</div>
-                <div class="course_time"><b>课程时间</b>：2014-04-08 13:30 - 14:30</div>
-                <p><b>课程内容</b>：和其它 UI 技术不同，前端的界面开发没有 Canvas 或 Stage 这样的概念（HTML5 Canvas 除外），在我们将一幅幅高大上的设计稿变成可交互的界面的过程中，大多数情况下是操作一个叫做 DOM 的对象。「跨平台」是前端开发最重要的优势之一，但由于不同浏览器厂商实现的 DOM API（其它 API 也有这种问题） 存在差异，导致前端开发从跨平台跳出来，却跳进了跨浏览器的泥坑，jQuery 最初就是为了解决这个问题而出现的，同时也封装了其它很实用的 API，让前端工程师能更专注于业务本身。本节将介绍 DOM 和 jQuery API 相关的内容。</p>
-                <p><b>课前准备</b>：暂无</p>
+                <div class="course_talker"><strong>讲师</strong>：yaochun</div>
+                <div class="course_time"><strong>课程时间</strong>：2014-04-08 13:30 - 14:30</div>
+                <p><strong>课程内容</strong>：和其它 UI 技术不同，前端的界面开发没有 Canvas 或 Stage 这样的概念（HTML5 Canvas 除外），在我们将一幅幅高大上的设计稿变成可交互的界面的过程中，大多数情况下是操作一个叫做 DOM 的对象。「跨平台」是前端开发最重要的优势之一，但由于不同浏览器厂商实现的 DOM API（其它 API 也有这种问题） 存在差异，导致前端开发从跨平台跳出来，却跳进了跨浏览器的泥坑，jQuery 最初就是为了解决这个问题而出现的，同时也封装了其它很实用的 API，让前端工程师能更专注于业务本身。本节将介绍 DOM 和 jQuery API 相关的内容。</p>
+                <dl>
+                    <dt>课前准备</dt>
+                    <dd>暂无</dd>
+                </dl>
             </div>
         </section>
         <section id="phase_2_2">
@@ -161,10 +175,13 @@
                     <img src="http://tp3.sinaimg.cn/1673574494/180/5661353970/1">
                 </div>
                 <h4>CSS 布局和动画基础</h4>
-                <div class="course_talker"><b>讲师</b>： zhailin</div>
-                <div class="course_time"><b>课程时间</b>：2014-04-15 13:30 - 14:30</div>
-                <p><b>课程内容</b>：Web 开发发展到今日，早已经不只是当年只用来呈现文献的作用，也能够承载像 Gmail、Windows 2.0 这种重型的应用 UI，同时还能提供丰富的动画视觉效果。本节就带领大家看一下那些灵活界面布局和酷炫动画效果都是如何制作出来的吧！</p>
-                <p><b>课前准备</b>：暂无</p>
+                <div class="course_talker"><strong>讲师</strong>： zhailin</div>
+                <div class="course_time"><strong>课程时间</strong>：2014-04-15 13:30 - 14:30</div>
+                <p><strong>课程内容</strong>：Web 开发发展到今日，早已经不只是当年只用来呈现文献的作用，也能够承载像 Gmail、Windows 2.0 这种重型的应用 UI，同时还能提供丰富的动画视觉效果。本节就带领大家看一下那些灵活界面布局和酷炫动画效果都是如何制作出来的吧！</p>
+                <dl>
+                    <dt>课前准备</dt>
+                    <dd>暂无</dd>
+                </dl>
             </div>
         </section>
         <section id="phase_2_3">
@@ -173,10 +190,13 @@
                     <img src="http://tp2.sinaimg.cn/1737601133/180/5631339708/0">
                 </div>
                 <h4>AJAX 和跨域</h4>
-                <div class="course_talker"><b>讲师</b>：xiaomeng</div>
-                <div class="course_time"><b>课程时间</b>：2014-04-22 13:30 - 14:30</div>
-                <p><b>课程内容</b>：浏览器端只是整个产品体系中的一个点，要让这个点能和服务端交互信息才能行程完整的体系。那么如何和服务器进行通信？这个过程中怎么保障安全？这一节课将带给你答案。</p>
-                <p><b>课前准备</b>：暂无</p>
+                <div class="course_talker"><strong>讲师</strong>：xiaomeng</div>
+                <div class="course_time"><strong>课程时间</strong>：2014-04-22 13:30 - 14:30</div>
+                <p><strong>课程内容</strong>：浏览器端只是整个产品体系中的一个点，要让这个点能和服务端交互信息才能行程完整的体系。那么如何和服务器进行通信？这个过程中怎么保障安全？这一节课将带给你答案。</p>
+                <dl>
+                    <dt>课前准备</dt>
+                    <dd>暂无</dd>
+                </dl>
             </div>
         </section>
         <section id="phase_2_4">
@@ -185,10 +205,13 @@
                     <img src="http://tp2.sinaimg.cn/1703476113/180/40046990804/1">
                 </div>
                 <h4>中级实战</h4>
-                <div class="course_talker"><b>讲师</b>：wangxiao</div>
-                <div class="course_time"><b>课程时间</b>：2013-04-29 02:30 - 04:30</div>
-                <p><b>课程内容</b>：暂无</p>
-                <p><b>课前准备</b>：暂无</p>
+                <div class="course_talker"><strong>讲师</strong>：wangxiao</div>
+                <div class="course_time"><strong>课程时间</strong>：2013-04-29 02:30 - 04:30</div>
+                <p><strong>课程内容</strong>：暂无</p>
+                <dl>
+                    <dt>课前准备</dt>
+                    <dd>暂无</dd>
+                </dl>
             </div>
         </section>
         <section id="phase_3_1">
@@ -197,10 +220,13 @@
                     <img src="http://tp3.sinaimg.cn/1043460474/180/5670568314/1">
                 </div>
                 <h4>性能优化和移动终端适配</h4>
-                <div class="course_talker"><b>讲师</b>：wangye.zhao</div>
-                <div class="course_time"><b>课程时间</b>：2013-05-06 02:30 - 04:30</div>
-                <p><b>课程内容</b>：暂无</p>
-                <p><b>课前准备</b>：暂无</p>
+                <div class="course_talker"><strong>讲师</strong>：wangye.zhao</div>
+                <div class="course_time"><strong>课程时间</strong>：2013-05-06 02:30 - 04:30</div>
+                <p><strong>课程内容</strong>：暂无</p>
+                <dl>
+                    <dt>课前准备</dt>
+                    <dd>暂无</dd>
+                </dl>
             </div>
         </section>
         <section id="phase_3_2">
@@ -209,10 +235,13 @@
                     <!--<img src="img/default_avatar_100@2x.jpg">-->
                 </div>
                 <h4>MVC、Workflow & etc. </h4>
-                <div class="course_talker"><b>讲师</b>：暂无</div>
-                <div class="course_time"><b>课程时间</b>：2013-05-13 02:30 - 04:30</div>
-                <p><b>课程内容</b>：暂无</p>
-                <p><b>课前准备</b>：暂无</p>
+                <div class="course_talker"><strong>讲师</strong>：暂无</div>
+                <div class="course_time"><strong>课程时间</strong>：2013-05-13 02:30 - 04:30</div>
+                <p><strong>课程内容</strong>：暂无</p>
+                <dl>
+                    <dt>课前准备</dt>
+                    <dd>暂无</dd>
+                </dl>
             </div>
         </section>
     </article>
